--- a/docroot/sites/all/themes/custom/nas/scss/layout/_hero.scss
+++ b/docroot/sites/all/themes/custom/nas/scss/layout/_hero.scss
@@ -54,9 +54,9 @@
 
   @include breakpoint(large-up) {
     .hero:not(.expand) & img:not(.canon-logo) {
-      height: 465px;
+      min-height: 465px;
       max-width: none;
-      width: auto;
+      width: 100%;
     }
   }
 
